# autoreduce-actions

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run-tests.yml
code_inspection/: action.yml
